ESlint and other tidy

--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <html>
   </head>
-    <audio id="myAudio">
+    <audio>
         <source src="audio/music.mp3" type="audio/mpeg">
     </audio>
     <script src="lib/jquery.js"> </script>
-    <script src="lib/js.js"> </script>
+    <script src="lib/main.js"></script>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/main.css">
   <head>
   <body>
     <div class="container">
-    <div style="background:white; width: 450px;">
+    <div>
       <h1>Welcome to the Christmas Quiz!</h1>
     </div>
     <div>
@@ -18,12 +18,10 @@
       <table id="Teams">
         <tr id="row-1"></tr>
           <td id="team-1"></td>
-          <td style="width:100px"></td>
           <td id="team-2"></td>
         </tr>
         <tr id="row-2"></tr>
           <td id="team-3"></td>
-          <td class="space"></td>
           <td id="team-4"></td>
         </tr>
       </table>
