Use flexbox for positioning. Some other tidying

--- a/index.html
+++ b/index.html
@@ -13,18 +13,14 @@
     <div>
       <h1>Welcome to the Christmas Quiz!</h1>
     </div>
-    <div>
-      <button type="button" class="btn btn-primary" id="pick-teams">Pick Teams</button>
-      <table id="Teams">
-        <tr id="row-1"></tr>
-          <td id="team-1"></td>
-          <td id="team-2"></td>
-        </tr>
-        <tr id="row-2"></tr>
-          <td id="team-3"></td>
-          <td id="team-4"></td>
-        </tr>
-      </table>
+    <button type="button" class="btn btn-primary" id="pick-teams">Pick Teams</button>
+    <div id="teams-row-1">
+      <div id='team-1' class='top'></div>
+      <div id='team-2' class='top'></div>
+    </div>
+    <div id="teams-row-2">
+      <div id='team-3' class='bottom'></div>
+      <div id='team-4' class='bottom'></div>
     </div>
   </div>
   </body>
