Adding a happy xmas message

--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
       <div id='team-3' class='bottom'></div>
       <div id='team-4' class='bottom'></div>
     </div>
+    <div id="enjoy" hidden>
+      <p>Have a Merry Christmas!</P>
+    </div>
   </div>
   </body>
 </html>
